--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "react-boilerplate",
   "version": "1.0.0",
-  "description": "",
+  "description": "React/Redux boilerplate",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production"
   },
   "keywords": [],
-  "author": "",
+  "author": "Marko Krtolica | Software Developer",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -16,13 +16,21 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.0",
+    "prop-types": "^15.6.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.10.2",
     "webpack-cli": "^3.0.2",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "node": "^10.4.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   }
